--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -11,7 +11,7 @@ skip_render:
   - .github/PULL_REQUEST_TEMPLATE.md
   - .github/workflows
 provider:
-  linux: travis
+  linux: github_actions
 channels:
   sources:
     - valmar
